# modelretrieval-1-submission-site

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  app-ui-redesign.md  architecture.md  compose.production.yml  compose.staging.yml  data-model.md  deployment-checklist.md  deployment-environments.md  deployment-runbook.md  deployment-strategy.md  diagrams.md  evaluation-spec.md  implementation-plan.md  open-questions.md  pyproject.toml  requirements.md  submission-spec.md  ui-flow.md  user-stories.md
.github/workflows/: ci-cd.yml
app/: __init__.py  accounts.py  audit.py  auth.py  cli.py  config.py  db.py  evaluation.py  ground_truth.py  main.py  processing.py  sessions.py  storage.py  submissions.py  web.py
app/routes/: admin.py  auth.py  team.py
app/static/: app.css
app/templates/: admin_audit_events.html  admin_dashboard.html  admin_ground_truth.html  admin_leaderboard.html  admin_periods.html  admin_submission_detail.html  admin_submissions.html  admin_teams.html  admin_users.html  (+7 more)
deployment/: github-secrets.md  production.env.example  staging.env.example  vps-setup.md
docs/: index.md
migrations/: env.py
tests/: test_accounts.py  test_admin_leaderboard.py  test_admin_periods.py  test_admin_submissions.py  test_admin_teams.py  test_admin_users.py  test_app.py  test_app_shell.py  test_async_evaluation.py  test_audit.py  test_auth.py  test_cli.py  test_config.py  test_db.py  test_evaluation.py  test_ground_truth.py  test_login_flow.py  test_password_change.py  test_sessions.py  test_storage.py  test_submissions.py  test_team_submissions.py
(+38 files in other folders)
